Add some of the html tags

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Recipes Website</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <div class="recipes-link">
-        <a href="recipes/lasagna-bolognese.html">Lasagna Bolognese - Recipe</a>
-        <a href="recipes/air-fryer-potato-wedges.html">Air Fryer Potato Wedges - Recipe</a>
-        <a href="recipes/air-fryer-ranch-pork-chops.html">Air Fryer Ranch Pork Chops - Recipe</a>
-    </div>
+    <header>
+        <h1>Odin Recipes</h1>
+    </header>
+    <main>
+        <div class="recipes-link">
+            <a href="recipes/lasagna-bolognese.html">Lasagna Bolognese - Recipe</a>
+            <a href="recipes/air-fryer-potato-wedges.html">Air Fryer Potato Wedges - Recipe</a>
+            <a href="recipes/air-fryer-ranch-pork-chops.html">Air Fryer Ranch Pork Chops - Recipe</a>
+        </div>
+    </main>
 </body>
 </html>
