--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Recipes Website</title>
 </head>
 <body>
     <header>
+        <img src="img/capacete-viking.png" alt="Viking helmet icon">
         <h1>Odin Recipes</h1>
     </header>
     <main>
