--- a/recipes/air-fryer-ranch-pork-chops.html
+++ b/recipes/air-fryer-ranch-pork-chops.html
@@ -50,5 +50,9 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p>Made by: <em>Lucas Eduardo Campolino</em></p>
+    <a href="../index.html">Back to main page</a>
+  </footer>
 </body>
 </html>
