--- a/recipes/air-fryer-potato-wedges.html
+++ b/recipes/air-fryer-potato-wedges.html
@@ -59,5 +59,9 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p>Made by: <em>Lucas Eduardo Campolino</em></p>
+    <a href="../index.html">Back to main page</a>
+  </footer>
 </body>
 </html>
